tests/parser/var_err11.expected
Syntax Error: line 4:
Unexpected token (TOK_KEY_INTEGER, 'integer'), expected a token type of:  
  'TOK_KEY_OF'
