tests/parser/var_err11.mtp
(* variable section start *)

(*missing of*)
var test: array(20) integer;

begin

end
.
